# lane-detection-xilinx

./: README.md
hw/hls/cvtcolor_bgr2gray/: xf_cvt_color_accel_gen_vitis.cpp  xf_cvt_color_config_gen_vitis.h  xf_cvt_color_tb_gen_vitis.cpp
hw/hls/filter2D/: filter2D_accel.cpp  filter2D_accel_config.h  filter2D_bt.cpp
hw/hls/gaussianfilter/: xf_gaussian_filter_accel.cpp  xf_gaussian_filter_config.h  xf_gaussian_filter_tb.cpp
hw/hls/mask/: mask.png.h  mask_accel.cpp  mask_accel_config.h  mask_tb.cpp
hw/hls/threshold/: xf_threshold_accel.cpp  xf_threshold_config.h  xf_threshold_tb.cpp
hw/vivado/: lane_detection_fpga.tcl
sw/: CMakeLists.txt
sw/include/: LaneDetector.hpp  general_settings.h  kernels.h  memory_address.h  memory_allocator.h  profiling.h  utils.h  xil_32.h  xtimer.h
sw/include/images/: cvtcolor_output_bgr.dat.h  filter2d_output_bgr.dat.h  gaussian_input_bgr.dat.h  gaussian_output_bgr.dat.h  mask.png.dat.h  mask_output.png.dat.h  threshold_output_bgr.dat.h
sw/include/kernel/: cvtcolor_bgrgray.h  filter2d.h  guassian_blur.h  mask.h  threshold.h
sw/src/: LaneDetector.cpp  kernels.cpp  main.cpp  memory_allocator.cpp  utils.cpp  xtimer.cpp
sw/src/kernel/: cvtcolor_bgr2gray.cpp  filter2d.cpp  gaussian_blur.cpp  mask.cpp  threshold.cpp
